Change Log
==========

v0.8.0
------
- Added makevideo.
- Enabled preview and using default timeout to allow camera to settle.

v0.7.0
------
- Network mode will keep trying to start the server periodically.
- RWX permissions for everyone.

v0.6.2
------
- Starts in network mode for demo (MAKE SURE YOU REVERT THIS!!!).

v0.6.1
------
- Fixed bug in IR mode where I hadn't imported pifacecad.

v0.6.0
------
- Saves network camera number to a file.
- Fixed bug where start mode would be one index below.

v0.5.0
------
- Added video mode.

v0.4.0
------
- video network option now converts video to mp4 using MP4Box (ffmpeg doesn't
  work).

v0.3.0
------
- snap-camera can now run commands intended for only some cameras. Also using
  pifacecad v2.0.0.

v0.2.0
------
- snap-camera-network can record video, get videos, halt, reboot and turn the
  backlight on/off. Also, split up the files in the snapcamera package.

v0.1.1
------
- Defined snap-camera-network as a python 3 script so that it can be run
  without explicitly invoking the Python 3 interpreter first.
- Added egg timer.

v0.1.0
------
- Can specify mode at start up (`snap-camera.py --mode network`).
- Fixed timimg (no longer used `while now() < pic_time: pass`).

v0.0.2
------
- Added fbi into dependencies.
- Fixed viewer bug: camera would crash if there were no images present

v0.0.1
------
- Fixed network mode bug: camera would crash if no ethernet cable was present.
- Fixed overlay folder bugs: camera would crash if no overlays directory,
  camera would not detect overlays.

v0.0.0
------
- Initial dev release.